# prclaw-crisis-response

./: .env.example  .gitignore  AGENT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  main.py  pyproject.toml  requirements.txt
agent/: reactagent.py
cli/: crisis_ui.py  display.py  interactive.py  main.py  models_ui.py  profile_ui.py  skills_ui.py  tools_ui.py
config/: model.yaml  prclaw.yaml  profile.yaml  prompt.yaml  skills.yaml  tools.yaml  unified_config.yaml
core/: __init__.py
core/common/: __init__.py  feature_registry.py  llm_provider.py  pr_category_schema.py  pr_neo4j_env.py
core/generation/: __init__.py  report_generator.py
core/knowledge/: vault_sync.py  (+4 more)
data/: company_dictionary.json
model/: factory.py
prompt/: system_prompt.txt
skills/: coding.md  copy-news-release.md  crisis-response.md  data-analysis.md  planning.md  research.md  tool-extension.md
tests/: test_local_knowledge.py
tools/: __init__.py  pr_collect_feedback.py  pr_generate_plan.py  pr_generate_report.py  pr_plan_requirements.py  pr_plan_schema.py  pr_query_knowledge.py
utils/: __init__.py  check_env.py  crisis_risk_analyzer.py  env_loader.py  long_term_memory.py  message_utils.py  path.py  plan_requirements_state.py  prclaw_config.py  profile_loader.py  prompt_loader.py  session_manager.py  skill_registry.py  task_context.py  tool_registry.py  unified_adapter.py  unified_pr_system_local.py  web_search.py
公关营销方法论知识库/: 传播渠道1.csv  传播渠道2.csv  公关提案分类与框架.docx  公关案例库.csv  公关案例库.xlsx  公关目标.csv  公关营销传播方法论 (1).docx  关系表详情.docx  品牌列表.docx  常用品牌列表.csv  行业分类.csv
(+59 files in other folders)
